--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@
     --light-second: #c3c2c8;
     --light-hover: #edf0f5;
     --light-text: #151426;
-    
 
     --blue: #0000ff;
     --white: #fff;
@@ -20,13 +19,12 @@
     --font-family: cursive;
 }
 
-.dark{
+.dark {
     --bg-body: var(--dark-body);
     --bg-main: var(--dark-main);
     --bg-second: var(--dark-second);
     --color-hover: var(--dark-hover);
     --color-txt: var(--dark-text);
-
 }
 
 .light {
@@ -43,9 +41,9 @@
     box-sizing: border-box;
 }
 
-html, 
+html,
 body {
-    height: 100hv ;
+    height: 100vh;
     display: grid;
     place-items: center;
     font-family: var(--font-family);
@@ -60,9 +58,10 @@ body {
     padding: 20px;
     position: relative;
     overflow: hidden;
+    /* transform: scale(1.25); */
 }
 
-.light . calendar {
+.light .calendar {
     box-shadow: var(--shadow);
 }
 
@@ -75,19 +74,20 @@ body {
     color: var(--color-txt);
     padding: 10px;
 }
- 
-.calendar--body {
+
+.calendar-body {
     padding: 10px;
 }
 
 .calendar-week-day {
+    height: 50px;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     font-weight: 600;
 }
 
 .calendar-week-day div {
-    display:  grid;
+    display: grid;
     place-items: center;
     color: var(--bg-second);
 }
@@ -108,6 +108,83 @@ body {
     padding: 5px;
     position: relative;
     cursor: pointer;
+    animation: to-top 1s forwards;
+    /* border-radius: 50%; */
+}
+
+.calendar-days div span {
+    position: absolute;
+}
+
+.calendar-days div:hover span {
+    transition: width 0.2s ease-in-out, height 0.2s ease-in-out;
+}
+
+.calendar-days div span:nth-child(1),
+.calendar-days div span:nth-child(3) {
+    width: 2px;
+    height: 0;
+    background-color: var(--color-txt);
+}
+
+.calendar-days div:hover span:nth-child(1),
+.calendar-days div:hover span:nth-child(3) {
+    height: 100%;
+}
+
+.calendar-days div span:nth-child(1) {
+    bottom: 0;
+    left: 0;
+}
+
+.calendar-days div span:nth-child(3) {
+    top: 0;
+    right: 0;
+}
+
+.calendar-days div span:nth-child(2),
+.calendar-days div span:nth-child(4) {
+    width: 0;
+    height: 2px;
+    background-color: var(--color-txt);
+}
+
+.calendar-days div:hover span:nth-child(2),
+.calendar-days div:hover span:nth-child(4) {
+    width: 100%;
+}
+
+.calendar-days div span:nth-child(2) {
+    top: 0;
+    left: 0;
+}
+
+.calendar-days div span:nth-child(4) {
+    bottom: 0;
+    right: 0;
+}
+
+.calendar-days div:hover span:nth-child(2) {
+    transition-delay: 0.2s;
+}
+
+.calendar-days div:hover span:nth-child(3) {
+    transition-delay: 0.4s;
+}
+
+.calendar-days div:hover span:nth-child(4) {
+    transition-delay: 0.6s;
+}
+
+.calendar-days div.curr-date,
+.calendar-days div.curr-date:hover {
+    background-color: var(--blue);
+    color: var(--white);
+    border-radius: 50%;
+}
+
+.calendar-days div.curr-date span {
+    display: none;
 }
 
 .month-picker {
@@ -153,7 +230,7 @@ body {
 .toggle span {
     margin-right: 10px;
     color: var(--color-txt);
-    }
+}
 
 .dark-mode-switch {
     position: relative;
@@ -173,47 +250,61 @@ body {
     top: 2px;
     left: 2px;
     transition: left 0.2s ease-in-out;
-
 }
-.dark-mode-switch-ident
 
+.dark .dark-mode-switch .dark-mode-switch-ident {
+    top: 2px;
+    left: calc(2px + 50%);
+}
 
+.month-list {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: var(--bg-main);
+    padding: 20px;
+    grid-template-columns: repeat(3, auto);
+    gap: 5px;
+    display: grid;
+    transform: scale(1.5);
+    visibility: hidden;
+    pointer-events: none;
+}
 
+.month-list.show {
+    transform: scale(1);
+    visibility: visible;
+    pointer-events: visible;
+    transition: all 0.2s ease-in-out;
+}
 
+.month-list > div {
+    display: grid;
+    place-items: center;
+}
 
+.month-list > div > div {
+    width: 100%;
+    padding: 5px 20px;
+    border-radius: 10px;
+    text-align: center;
+    cursor: pointer;
+    color: var(--color-txt);
+}
 
+.month-list > div > div:hover {
+    background-color: var(--color-hover);
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@keyframes to-top {
+    0% {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
